# meson_mwe

./: .gitignore
default_options_override/: README  default_options_override.c  meson.build
default_options_override/subprojects/a/: a.c  a.h  meson.build
freetype2_link_fail/: README  freetype2_link_fail.c  meson.build
vs2019_custom_target/: meson.build  vs2019_custom_target.c
vs2019_custom_target/subprojects/my_subproject/: meson.build  my_subproject.c  my_subproject.h  my_test.asm
